--- a/presskit/index.html
+++ b/presskit/index.html
@@ -7,6 +7,18 @@
 		<title>Solar Rogue : Tactical Roguelike in Space</title>
 		<link href="data/uikit.gradient.min.css" rel="stylesheet" type="text/css">
 		<link href="data/style.css" rel="stylesheet" type="text/css">
+		
+		<meta name="description" content="Solar rogue is a space exploration adventure in the purest tradition of roguelike. Featuring procedurally generated solar systems, perma-death, tactical turned-based gameplay and a variety of ships, planets and ennemy to challenge!">
+		<meta name="keywords" content="Ombarus, Solar Rogue, Roguelike, Video Game, Mobile, Mobile App, PC, Steam, Itch.io, Tactical, Turn-Based" />
+		
+		<meta property="og:title" content="Solar Rogue">
+		<meta property="og:description" content="A Roguelike Space Adventure">
+		<meta property="og:image" content="https://www.ombarus.com/img/portfolio/solarrogue.png">
+		<meta property="og:url" content="https://www.solar-rogue.com/">
+		<meta property="og:site_name" content="Solar Rogue">
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:site" content="@ombarus1" />
+		<meta name="twitter:creator" content="@ombarus1" />
 	</head>
 
 	<!-- TODO: Add analytics page -->
@@ -37,19 +49,19 @@
 							<p>
 								<strong>Developer:</strong><br>
 								Ombarus Dev<br>
-								Based in Chiba, Japan
+								Based in Chiba, Japan<br>
+								Since 2018
 							</p>
 							<p>
-								<strong>Founded:</strong><br>
-								September 1, 2018
+								<strong>Current version:</strong><br>
+								Alpha 5 (v0.5.0)
 							</p>
-							<p>
-								<strong>Website:</strong><br>
-								<a href="https://store.steampowered.com/app/1301410">store.steampowered.com/app/1301410</a>
-								<!--<a href="https://ombarus.itch.io/solar-rogue">Itch.io</a>
-								<a href="https://play.google.com/store/apps/details?id=com.ombarus.solarrogue">Android</a>
-								<a href="https://apps.apple.com/us/app/solar-rogue/id1497230319">iOS</a>-->
-							</p>
+							<p><strong>Release date:</strong><br>2021<br></p>
+							<!-- Platforms -->
+							<p><strong>Platforms:</strong><br><a href="https://store.steampowered.com/app/1301410">Steam (Windows, Linux)</a><br>
+							<a href="https://ombarus.itch.io/solar-rogue">Itch.io (Windows, Linux, Android)</a><br>
+							<a href="https://play.google.com/store/apps/details?id=com.ombarus.solarrogue">Android (Phone, Tablet)</a><br>
+							<a href="https://apps.apple.com/us/app/solar-rogue/id1497230319">iOS (iPhone, iPad)</a><br></p>
 							<p>
 								<strong>Press / Business Contact:</strong><br>
 								<a href="mailto:info@ombarus.com">info@ombarus.com</a>
@@ -58,22 +70,12 @@
 							<strong>Social:</strong><br>
 							<a href="http://www.solar-rogue.com/">Solar Rogue Website</a><br>
 							</p><a href="https://twitter.com/ombarus1">Twitter: @Ombarus1</a><br>
-							<!--<p></p><a href="http://facebook.com/HarebrainedSchemes">Facebook: HarebrainedSchemes</a><br>-->
-							<p></p><!-- Release date -->
-							<p><strong>Release date:</strong><br>2021<br></p>
-							<!-- Platforms -->
-							<p><strong>Platforms:</strong><br><a href="https://store.steampowered.com/app/1301410">Steam (Windows, Linux)</a><br>
-							<a href="https://ombarus.itch.io/solar-rogue">Itch.io (Windows, Linux, Android)</a><br>
-							<a href="https://play.google.com/store/apps/details?id=com.ombarus.solarrogue">Android (Phone, Tablet)</a><br>
-							<a href="https://apps.apple.com/us/app/solar-rogue/id1497230319">iOS (iPhone, iPad)</a><br></p>
-							
 							<!-- Pricing -->
 							<p><strong>Regular Price:</strong><br>
-							</p><table><tbody><tr><td>USD</td><td>$15.00</td></tr></tbody></table>
+							<table><tbody><tr><td>USD</td><td>$15.00</td></tr></tbody></table>
+							</p>
 							<p></p>					
-							<p>
-							<!--<strong>Releases:</strong><br />-->							</p>
-							<p>							</p> 
+							<p></p>
 						</div>
 						<div class="uk-width-medium-4-6">
 							<h2 id="description">Description</h2><strong></strong>
@@ -101,11 +103,10 @@ The game is updated regularly to add more content and fix any issues. It already
 <li>Unique challenges</li>
 </ul>
 </p>
+
+<h2 id="history">History</h2><strong></strong>
+<p>I'm a single, independent developper. I've worked many years in the game industry before leaving my current job to start my own independent studio to make the games I like. Solar Rogue is based off an old ASCII based space roguelike prototype I made years ago updated for todays graphics while also trying to keep the traditional roguelike look. It's being developped using the Open Source Godot Game Engine. I also have a <a href="https://www.youtube.com/ombarus">youtube channel</a> where I post developpement progress for the game and various deep dive into the programming challenges of game making.</p>
 <p>
-※ The game does not require any internet connection.<br />
-※ No Ads or Microtransactions<br />
-</p>
-							<ul>							</ul>
 						</div>
 					</div>
 
@@ -136,7 +137,7 @@ The game is updated regularly to add more content and fix any issues. It already
 
 					<hr>
 
-					<h2 id="logo">Logo &amp; Icon</h2><div class="uk-grid images" style="position: relative; height: 268.625px;"><div class="uk-width-medium-1-2" style="position: absolute; left: 0px; top: 0px;"><a href="data/header.png"><img src="data/header.png" alt="logo"></a></div><div class="uk-width-medium-1-2" style="position: absolute; left: 436px; top: 0px;"><a href="data/logo/splash-2.png"><img src="data/logo/splash-2.png" alt="Ombarus Dev"></a></div></div>
+					<h2 id="logo">Logo &amp; Icon</h2><div class="uk-grid images" style="position: relative; height: 268.625px;"><div class="uk-width-medium-1-2" style="position: absolute; left: 0px; top: 0px;"><a href="data/thumbnail.png"><img src="data/thumbnail.png" alt="logo"></a></div><div class="uk-width-medium-1-2" style="position: absolute; left: 436px; top: 0px;"><a href="data/logo/splash-2.png"><img src="data/logo/splash-2.png" alt="Ombarus Dev"></a></div></div>
 					<!--
 					<hr>
 					<h2 id="quotes">Selected Articles</h2>
@@ -144,7 +145,7 @@ The game is updated regularly to add more content and fix any issues. It already
 					-->
 					<hr>					<div class="uk-grid">
 						<div class="uk-width-medium-1-2">
-							<h2 id="credits">Team &amp; Repeating Collaborators</h2><p><strong>Ombarus Dev</strong><br><a href="https://www.ombarus.com/"></a></p>						</div>
+							<h2 id="credits">Team</h2><p><strong>Ombarus Dev</strong><br><a href="https://www.ombarus.com/"></a></p>						</div>
 						<div class="uk-width-medium-1-2">
 							<h2 id="contact">Contact</h2><p><strong>Inquiries</strong><br><a href="mailto:info@ombarus.com">info@ombarus.com</a></p><p><strong>Twitter</strong><br><a href="https://twitter.com/ombarus1">twitter.com/Ombarus1</a></p>						</div>
 					</div>
