--- a/presskit/index.html
+++ b/presskit/index.html
@@ -8,7 +8,7 @@
 		<link href="data/uikit.gradient.min.css" rel="stylesheet" type="text/css">
 		<link href="data/style.css" rel="stylesheet" type="text/css">
 		
-		<meta name="description" content="Solar rogue is a space exploration adventure in the purest tradition of roguelike. Featuring procedurally generated solar systems, perma-death, tactical turned-based gameplay and a variety of ships, planets and ennemy to challenge!">
+		<meta name="description" content="Solar rogue is a space exploration adventure in the purest tradition of roguelike. Featuring procedurally generated solar systems, perma-death, tactical turned-based gameplay and a variety of ships, planets and enemies to challenge!">
 		<meta name="keywords" content="Ombarus, Solar Rogue, Roguelike, Video Game, Mobile, Mobile App, PC, Steam, Itch.io, Tactical, Turn-Based" />
 		
 		<meta property="og:title" content="Solar Rogue">
